[package]
name = "cel-memory-postgres"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "Apache-2.0"
authors = ["Dimitrios Pagkratis <dimitris@timberhub.com>"]
homepage = "https://github.com/dimpagk92/cel-memory-postgres"
documentation = "https://docs.rs/cel-memory-postgres"
repository = "https://github.com/dimpagk92/cel-memory-postgres"
description = "PostgreSQL + pgvector memory backend for AI agents, implementing cel-memory."
keywords = ["ai", "memory", "postgres", "pgvector", "agent"]
categories = ["asynchronous", "database"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
cel-memory = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
pgvector = { version = "0.4", features = ["sqlx"] }
serde_json = "1"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono", "json"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres"] }
